added SoMe tag icons to footer

--- a/cover.css
+++ b/cover.css
@@ -19,6 +19,14 @@ a:hover {
   border: .05rem solid #fff;
 }
 
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
 
 /*
  * Base structure
